add Token.java and creating a save to file method